# wapimaji-mcp

./: AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  requirements.txt
src/wapimaji_mcp/: __init__.py  server.py
tests/: test_smoke.py
